# dbgprint

./: README.md  setup.cfg
src/dbgprint/: __init__.py
src/dbgprint.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
