[metadata]
name = dbgprint
version = 1.0.5.8
author = YouHeng Zhou
author_email = youhengzhou@cmail.carleton.ca
description = A package for a python command line terminal debugger
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/youhengzhou/dbgprint
project_urls =
    Bug Tracker = https://github.com/youhengzhou/dbgprint/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
